--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,6 +1,9 @@
+#todo Figure out what this stuff is and update it
 #spring.datasource.url=jdbc:h2:file:~/test2;DB_CLOSE_ON_EXIT=FALSE;AUTO_RECONNECT=TRUE
+#spring.datasource.url=jdbc:h2:file:db;DB_CLOSE_ON_EXIT=FALSE;AUTO_RECONNECT=TRUE
 #spring.datasource.username=admin
 #spring.datasource.password=password
 #spring.datasource.driver-class-name=org.h2.Driver
 #spring.jpa.show-sql=true
 #spring.jpa.hibernate.ddl-auto=update
+spring.security.user.password=password
