--- a/angular_frontend/package.json
+++ b/angular_frontend/package.json
@@ -23,11 +23,11 @@
     "@angular/platform-browser": "^5.2.0",
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
-    "ajv": "^6.0.0",
+    "ajv": "^6.5.4",
     "bootstrap": "^4.1.3",
     "core-js": "^2.4.1",
     "font-awesome": "^4.7.0",
-    "hoek": "^5.0.3",
+    "hoek": "^5.0.4",
     "jquery": "^3.3.1",
     "popper.js": "^1.14.4",
     "rxjs": "^5.5.6",
@@ -38,7 +38,7 @@
     "@angular/compiler-cli": "^5.2.0",
     "@angular/language-service": "^5.2.0",
     "@types/jasmine": "~2.8.3",
-    "@types/jasminewd2": "~2.0.2",
+    "@types/jasminewd2": "^2.0.4",
     "@types/node": "~6.0.60",
     "codelyzer": "^4.0.1",
     "jasmine-core": "~2.8.0",
